components/platform/keycloak/base/authorization-policy-db.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: zylos-keycloak-postgres-authz
  namespace: zylos-identity
spec:
  selector:
    matchLabels:
      cnpg.io/cluster: keycloak-postgres
      app.kubernetes.io/component: identity-database
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - "cluster.local/ns/zylos-identity/sa/keycloak"
              - "cluster.local/ns/zylos-identity/sa/keycloak-postgres"
      to:
        - operation:
            ports: ["5432"]
